<resources>
    <string name="app_name">AutoPatrol</string>
    <string name="mission">mission</string>
    <string name="aircraft">aircraft</string>
    <string name="media">media</string>
    <string name="aircraft_unknown">unknown aircraft</string>
    <string name="camera_unknown">unknown camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>

    <string name="title_activity_show_full_image">ShowFullImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_play_video">PlayVideo</string>
    <!--mission report begin-->
    <string name="mission_report_name">任务名称:</string>
    <string name="mission_report_type">任务类型:</string>
    <string name="mission_report_photo">照片张数:</string>
    <string name="mission_report_tips">提示:待无人机停稳后关闭无人机电源，取出相机SD卡，进行后续操作</string>
    <!--mission report end-->

    <string name="drone_state_on">无人机已连接</string>
    <string name="drone_state_off">无人机未连接</string>

    <string name="drone_info_name">无人机型号：</string>
    <string name="drone_info_camera">相机型号：</string>

    <string name="app_func_mission_run">任务执行</string>
    <string name="app_func_mission_manage">任务管理</string>
    <string name="app_func_data_analysis">巡检记录</string>
    <string name="app_func_data_download">数据下载</string>

    <string name="record_select_title">选择巡检记录</string>
    <string name="record_download_title">选择待下载记录</string>

    <string name="selected_flight_record">SELECTED_RECORD</string>
    
    <string name="record_func_delete">删除</string>
    <string name="record_func_check">查看</string>
    <string name="record_func_download">下载</string>

    <string name="show_visible">可见光图像</string>
    <string name="show_infrared">红外光图像</string>
    <string name="gen_report">生成巡检</string>
    <string name="run_analysis">运行分析</string>
    <string name="run_analysis_title">正在分析</string>

    <string name="normal_panel_title">normalPanel</string>
    <string name="covered_panel_title">coveredPanel</string>
    <string name="broken_panel_title">brokenPanel</string>

    <string name="photo_download_title">正在下载图片</string>

</resources>
