<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hitices.autopatrol.activity.DataAnalyseMapActivity">

    <LinearLayout
        android:id="@+id/ll_show_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_visible" />

        <Button
            android:id="@+id/btn_show_infrared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_infrared" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_record_visible_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.amap.api.maps2d.MapView
            android:id="@+id/mv_record_visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_record_infrared_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.amap.api.maps2d.MapView
            android:id="@+id/mv_record_infrared"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_gen_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/gen_report" />

    <Button
        android:id="@+id/btn_run_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_record_func_button"
        android:minHeight="32dp"
        android:text="@string/run_analysis" />


</RelativeLayout>
