<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hitices.autopatrol.activity.AppMainActivity">

    <ImageView
        android:id="@+id/iv_drone_logo"
        android:layout_width="@dimen/drone_logo_size"
        android:layout_height="@dimen/drone_logo_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/drone_logo" />

    <LinearLayout
        android:id="@+id/ll_drone_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_drone_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_drone_state_light"
            android:layout_width="@dimen/drone_state_light_size"
            android:layout_height="@dimen/drone_state_light_size"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_drone_state" />

        <TextView
            android:id="@+id/tv_drone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/drone_state_off"
            android:textSize="@dimen/drone_state_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_drone_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_drone_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_drone_info"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/drone_info_name"
                android:textSize="@dimen/drone_info_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_drone_info_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="start"
                android:text="DJI M100"
                android:textSize="@dimen/drone_info_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/drone_info_camera"
                android:textSize="@dimen/drone_info_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_drone_info_camera"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="start"
                android:text="DJI M100"
                android:textSize="@dimen/drone_info_text_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_func_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_drone_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_app_func_mission_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_app_func_button"
            android:text="@string/app_func_mission_manage"
            android:textSize="@dimen/app_func_text_size" />

        <Button
            android:id="@+id/btn_app_func_data_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="@drawable/bg_app_func_button"
            android:text="@string/app_func_data_analysis"
            android:textSize="@dimen/app_func_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_func_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_func_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_app_func_mission_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_app_func_button"
            android:text="@string/app_func_mission_run"
            android:textSize="@dimen/app_func_text_size" />

        <Button
            android:id="@+id/btn_app_func_data_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="@drawable/bg_app_func_button"
            android:text="@string/app_func_data_download"
            android:textSize="@dimen/app_func_text_size" />
    </LinearLayout>

</RelativeLayout>
